feat(duotone-image): create duotone image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,29 @@
-<ng2-kw-duotone-image></ng2-kw-duotone-image>
+<div class="holder">
+  <div class="img">
+    <ng2-kw-duotone-image
+      darkColor = '#14143e'
+      lightColor = '#fd1c49'
+      width = 500
+      height = 500
+      src = 'https://scontent.cdninstagram.com/t51.2885-15/e35/11809655_1442571576072734_1966976611_n.jpg?ig_cache_key=MTA0Nzg2NTgzNzU4OTIwMDY4OQ%3D%3D.2'>
+    </ng2-kw-duotone-image>
+    <img
+      src = 'https://scontent.cdninstagram.com/t51.2885-15/e35/11809655_1442571576072734_1966976611_n.jpg?ig_cache_key=MTA0Nzg2NTgzNzU4OTIwMDY4OQ%3D%3D.2'/>
+  </div>
+  
+  
+  <div class="img">
+    <ng2-kw-duotone-image
+      darkColor = '#14143e'
+      lightColor = '#00efab'
+      width = 500
+      height = 500
+      src = 'https://scontent.cdninstagram.com/t51.2885-15/e35/11313562_1460451380946093_1518633220_n.jpg?ig_cache_key=MTA0NjI3MzA2NDgwNTE3MTA5OQ%3D%3D.2'>
+    </ng2-kw-duotone-image>
+    <img
+      src = 'https://scontent.cdninstagram.com/t51.2885-15/e35/11313562_1460451380946093_1518633220_n.jpg?ig_cache_key=MTA0NjI3MzA2NDgwNTE3MTA5OQ%3D%3D.2'/>
+  </div>
+</div>
+
+
+<a href="http://codepen.io/jmperez/pen/LGqaxQ">Duotone effect (Spotify Duotone) - Using feColumnMatrix</a>
